# project-builder

./: Cargo.toml  README.md  data.toml
src/: error.rs  main.rs  menu.rs  project_sqlite.rs  projects.rs
