[package]
name = "project-builder"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
inquire = { version = "0.7.5", features = ["date", "editor"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlite = "0.36.1"
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"
